fixed spacing withing employee div

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -19,7 +19,7 @@ h2 {
 	text-align: center;
 	margin: 0 auto;
 	background: #fcfcfc;
-	max-width: 1000px;
+	max-width: 1200px;
 	@media screen and (min-width: 768px) {
 		text-align: left;
 		padding: 20px;
@@ -74,12 +74,13 @@ h2 {
 .employee-email {
 	word-wrap: break-word;
 	margin: 0 auto;
+	height: auto;
 }
 
 .employee img {
 	border-radius: 50%;
 	max-width: 100%;
-	min-width:50px!important;
+	//min-width:50px!important;
 }
 .modalBackdrop {
 	display: none;
